# cellular-automata

./: Cargo.toml  README.md
src/: camera.rs  main.rs  object.rs  renderer.rs  shader.wgsl  shader2.wgsl  shader3.wgsl  texture.rs  vertex.rs
src/automata/: gol.wgsl
