[package]
name = "cellular_automata"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.0"
tokio = { version = "1", features = ["full"] }
# sdl2 = "0.37.0"
anyhow = "1.0.100"
bytemuck = { version = "1.24", features = [ "derive" ] }
pollster = "0.4.0"
cgmath = "0.18"

[dependencies.image]
version = "0.24"
# default-features = false
features = ["png", "jpeg"]
